[gd_scene load_steps=2 format=3 uid="uid://by50khmkxidsq"]

[ext_resource type="Script" uid="uid://c1vaybu1206st" path="res://settings_menu.gd" id="1_0elue"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_0elue")

[node name="MainMenu" type="Button" parent="."]
offset_top = 616.0
offset_right = 182.0
offset_bottom = 647.0
text = "Go Back to Main Menu"

[node name="Buttonsize" type="HSlider" parent="."]
visibility_layer = 2
offset_left = 944.0
offset_top = 56.0
offset_right = 1112.0
offset_bottom = 72.0
max_value = 5.0
tick_count = 10
ticks_on_borders = true

[node name="Slider Label size" type="TextEdit" parent="Buttonsize"]
layout_mode = 0
offset_left = -16.0
offset_top = -48.0
offset_right = 200.0
offset_bottom = -8.0
text = "Slider Visability button size"

[node name="SliderVisibility" type="Button" parent="."]
offset_top = 8.0
offset_right = 126.0
offset_bottom = 72.0
text = "Slider Visability"

[node name="Main text" type="TextEdit" parent="."]
offset_left = 448.0
offset_top = 248.0
offset_right = 1024.0
offset_bottom = 448.0
text = "This area is under coding"
scroll_smooth = true

[node name="Main Text Y" type="VSlider" parent="."]
offset_left = 128.0
offset_top = 256.0
offset_right = 176.0
offset_bottom = 440.0
tick_count = 15
ticks_on_borders = true

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 88.0
offset_top = 192.0
offset_right = 232.0
offset_bottom = 256.0
text = "Under Coding Y
Value Slider"

[node name="Music" type="Button" parent="."]
offset_left = 476.0
offset_top = 61.0
offset_right = 602.0
offset_bottom = 120.0
text = "Go To Music"

[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="drag_ended" from="Buttonsize" to="." method="_on_buttonsize_drag_ended"]
[connection signal="pressed" from="SliderVisibility" to="." method="_on_slider_visibility_pressed"]
[connection signal="drag_started" from="Main Text Y" to="." method="_on_font_size_slider_drag_started"]
[connection signal="pressed" from="Music" to="." method="_on_music_pressed"]
